--- a/lektion-2/4. CSS-Grid/index.html
+++ b/lektion-2/4. CSS-Grid/index.html
@@ -10,8 +10,22 @@
 </head>
 <body>
     
+    <div class="grid">
+        <div id="item-1" class="item">HEADER1</div>
+        <div id="item-2" class="item">HEADER2</div>
+        <div id="item-3" class="item">HEADER3</div>     
+        <div id="item-4" class="item">SIDE MENU</div>
+        <div id="item-5" class="item">MAIN CONTENT</div>
+        <div id="item-6" class="item">Side Menu</div>
+        <div id="item-7" class="item">FOOTER</div>
+    </div>
+
+
+
+
+
+
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
 </body>
 </html>
