--- a/lektion-3/jood/index.html
+++ b/lektion-3/jood/index.html
@@ -6,14 +6,20 @@
     <script src="https://kit.fontawesome.com/124ac6c2b5.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    
     <title>Jood - App Landing Page</title>
 </head>
 <body>
 
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-            <a class="navbar-brand" href="#">JOOD.</a>
+            <!-- <a class="navbar-brand" href="#">JOOD<span class="text-yellow">.</span></a>
+            <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a> -->
+            <a class="navbar-brand" href="#"><img src="images/logo.svg" alt=""></a>
+
+
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
