--- a/lektion-3/jood/index.html
+++ b/lektion-3/jood/index.html
@@ -18,8 +18,6 @@
             <a class="navbar-brand" href="#"><img src="images/logo.png" alt=""></a> -->
             <a class="navbar-brand" href="#"><img src="images/logo.svg" alt=""></a>
 
-
-
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -46,6 +44,28 @@
         </div>
     </nav>
 
+    <!-- showcase -->
+    <div id="showcase" class="container my-4">
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <h1 class="title">Creative Way to Showcase Your App</h1>
+                <p class="ingress">Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum is simply</p>
+
+                <div class="d-flex align-items-center">
+                    <button type="button" class="btn btn-outline-light">Download now</button>
+                    <a href="#" class="ms-4 watch-video">
+                        <div class="d-flex align-items-center">
+                            <img src="images/play-icon.svg" alt="">    
+                            <span class="ms-2">Watch Video</span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img src="images/mobiles.png" alt="">
+            </div>
+        </div>
+    </div>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
