--- a/lektion-4/index.html
+++ b/lektion-4/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar-dark pt-md-3">
+        <nav class="navbar navbar-expand-lg navbar-dark ">
             <div class="container">
                 <a class="navbar-brand" href="#"><img src="images/logo.svg" alt=""></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -35,14 +35,32 @@
                             <a class="nav-link" href="#">Contact Us</a>
                         </li>
                     </ul>
-                    <button class="btn btn-warning">Get the app</button>
+                    <button class="get-app btn btn-warning">Get the app</button>
                 </div>
             </div>
         </nav>
+
+        <!-- showcase -->
+        <section id="showcase" class="container mt-3">
+            <div class="first-column">
+                <h1 class="title">Creative Way to Showcase Your App</h1>
+                <p class="ingress">Lorem Ipsum is simply dummy text of the printing and typesetting industry Lorem Ipsum is simply</p>             
+                <button class="download btn btn-outline-light">Download now</button>
+                <button class="watch btn">
+                    <div class="d-flex align-items-center justify-content-center">
+                        <img src="images/play-icon.svg" alt="Watch Video">
+                        <span class="ms-3">Watch Video</span>
+                    </div>
+                </button>
+            </div>
+            <div class="second-column">
+                <img class="mobiles" src="images/mobiles.png" alt="Mobile Phones">
+            </div>
+        </section>
     </header>
 
 
-    
+    <div style="height: 500px;"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 </body>
 </html>
