--- a/lektion-8/dashboard.html
+++ b/lektion-8/dashboard.html
@@ -34,6 +34,51 @@
         </div>
     </nav>
 
+    <div id="dashboard">
+        <div class="container">
+            <div class="page-title">
+                <h1>Dashboard</h1>
+                <p>Overview of your Internet of Things</p>
+            </div>
+
+            <!-- gridview -->
+            <div class="gridview">
+                <!-- daily statistics -->
+                <div id="daily-statistics">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            <div class="title">
+                                <div>
+                                    <h1>Daily Stats</h1>
+                                    <p>1000000 messages sent</p>
+                                </div>
+                                <a class="rotate" href="#"><i class="fas fa-sync-alt"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                
+                <!-- list of devices -->
+                <div id="device-list">
+                    <div class="card shadow">
+                        <div class="card-body">
+                            <div class="title">
+                                <div>
+                                    <h1>List of Devices</h1>
+                                    <p>5 devices total</p>
+                                </div>
+                                <a class="rotate" href="#"><i class="fas fa-sync-alt"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+
+        </div>
+    </div>
 
 
 
